feat(search): support repository search rules
